plugins {
    id 'java'
}

group = 'edu.utdallas.cs'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

tasks.named('test') {
    useJUnitPlatform()
}
